feature(api): add PATCH for update task
